syntax = "proto3";

package pb;

option go_package = "go-misc/internal/grpc/pb";

service HelloService {
  rpc Say(SayRequest) returns (SayResponse);
}

message SayRequest {
  string id = 1;
}
message SayResponse {
  string message = 1;
}